overflow hidden for white pace issue in dock mode for react member

--- a/docroot/react/src/views/secure/visit/conference/conference.less
+++ b/docroot/react/src/views/secure/visit/conference/conference.less
@@ -67,6 +67,7 @@
 
     .video-conference-container {
         height: calc(100vh - 130px);
+        overflow: hidden;
 
         .video-conference {
             height: 100%;
